[gd_scene load_steps=8 format=3 uid="uid://c2mvefv1k4j4m"]

[ext_resource type="Script" path="res://scripts/level_4.gd" id="1_kywaf"]
[ext_resource type="PackedScene" uid="uid://bwd1ajpap6kfd" path="res://scenes/planet.tscn" id="2_2un51"]
[ext_resource type="PackedScene" uid="uid://c0u3fk2iyjxa4" path="res://scenes/Forge.tscn" id="3_ehpcw"]
[ext_resource type="PackedScene" uid="uid://b5exmk65lrs0v" path="res://scenes/black_hole.tscn" id="4_4m1sv"]
[ext_resource type="PackedScene" uid="uid://bvklsx0dou66p" path="res://scenes/starship.tscn" id="5_1uurh"]
[ext_resource type="PackedScene" uid="uid://guylsgegxwxb" path="res://scenes/white_hole.tscn" id="6_mkl1k"]
[ext_resource type="PackedScene" uid="uid://xa5nfh785sq4" path="res://scenes/extra_dark_black_hole.tscn" id="7_qrpof"]

[node name="Level4" type="Node2D"]
script = ExtResource("1_kywaf")
debug_enabled = true

[node name="Planet" parent="." instance=ExtResource("2_2un51")]
unique_name_in_owner = true
position = Vector2(131, 548)

[node name="Forge" parent="." node_paths=PackedStringArray("level") instance=ExtResource("3_ehpcw")]
position = Vector2(3766, 894)
level = NodePath("..")

[node name="OreCountLabel" type="Label" parent="Forge"]
unique_name_in_owner = true
offset_left = -79.0
offset_top = -106.0
offset_right = 70.0
offset_bottom = -83.0
text = "Ore Delivered: 0/10"

[node name="BlackHole1" parent="." instance=ExtResource("4_4m1sv")]
unique_name_in_owner = true
position = Vector2(1329, 542)

[node name="BlackHole4" parent="." instance=ExtResource("4_4m1sv")]
unique_name_in_owner = true
position = Vector2(3672, 642)

[node name="BlackHole2" parent="." instance=ExtResource("4_4m1sv")]
unique_name_in_owner = true
position = Vector2(2213, -19)

[node name="BlackHole3" parent="." instance=ExtResource("4_4m1sv")]
unique_name_in_owner = true
position = Vector2(2691, 717)

[node name="Starship1" parent="." instance=ExtResource("5_1uurh")]
unique_name_in_owner = true
position = Vector2(1648, 312)

[node name="Starship2" parent="." instance=ExtResource("5_1uurh")]
unique_name_in_owner = true
position = Vector2(3045, 451)

[node name="WhiteHole" parent="." instance=ExtResource("6_mkl1k")]
unique_name_in_owner = true
position = Vector2(929, 1123)

[node name="ExtraDarkBlackHole" parent="." instance=ExtResource("7_qrpof")]
unique_name_in_owner = true
position = Vector2(1483, 2201)
scale = Vector2(6, 6)
